BUGFIX: fix the bug causing About Me to jump after it's animation

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,12 +19,11 @@ img {
   }
 
   to {
-    margin-left: 5%;
+    margin-left: 0%;
     width: 100%;
   }
 }
 .Background {
-  margin-left: 5%;
   animation-duration: 2s;
   animation-name: slideleft;
 }
@@ -36,11 +35,9 @@ img {
 .Background h3 {
   font-family: Garamond, serif;
   font-weight: bold;
-  margin-left: 2%;
 }
 .Background h4 {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 2%;
 }
 @keyframes slideright {
   from {
